--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0"?>
 <package>
-  <name>GTRF</name>
+  <name>gtrf</name>
   <version>1.0.0</version>
   <description>The GTRF package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="will.andrew@bristol.ac.uk">will</maintainer>
 
 
@@ -19,7 +18,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/uav_id</url> -->
+  <url type="website">https://github.com/CWOA/gtrf</url>
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
